# gapengine

./: CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  README.md  gapengine.cpp  gapengine.h  vcpkg.json
res/shaders/: imgui.ini  light.normal.shader  light.shader  lightsource.shader  shader.shader  shader1.shader
src/: Application.cpp  ApplicationInit.hpp  Bufferable.cpp  Bufferable.h  Camera.cpp  Camera.h  Config.cpp  Config.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferDebugger.cpp  FrameBufferDebugger.h  Ground.cpp  Ground.h  ImGuiSettings.cpp  ImGuiSettings.h  IndexBuffer.cpp  IndexBuffer.h  JsonGeoTypeMapper.h  JsonSceneReader.cpp  JsonSceneReader.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  MeshAssetReader.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ScreenCanvas.cpp  ScreenCanvas.h  TestGeometry.cpp  TestGeometry.h  Transform.cpp  Transform.h  UniformBuffer.cpp  UniformBuffer.h  Utils.h  Vertex.h  (+9 more)
src/alg/: AlgUtil.h  Algorithm.cpp  Algorithm.h  Noise.cpp  Noise.h  NoiseFrameBuffer.cpp  NoiseFrameBuffer.h  NoiseType.h  PerlinNoise.cpp  PerlinNoise.h
src/animation/: Animator.cpp  Animator.h  Bone.cpp  Bone.h  BoneAnimation.cpp  BoneAnimation.h  SceneAnimation.cpp  SceneAnimation.h
src/assetpacker/: AssetFile.cpp  AssetFile.h  AssetFileExtractor.cpp  AssetFileExtractor.h  BridgeReader.cpp  BridgeReader.h  Config.h  ExtractorException.h  Meta.cpp  Meta.h  MultiMatReader.cpp  MultiMatReader.h  NormalReader.cpp  NormalReader.h  Reader.cpp  Reader.h  ReaderException.h
src/atomsphere/: Atomsphere.cpp  Atomsphere.h  AtomsphereConstants.h  AtomsphereModel.cpp  AtomsphereModel.h  DensityProfileLayer.h
src/defaultshader/: AdditionalShader.cpp  AdditionalShader.h  AdditionalShaderFactory.h  DefaultShaderOperationUtils.h  DefaultShaderType.h  OutlineShader.cpp  OutlineShader.h
src/exceptions/: ErrorContentException.h  FrameBufferInitializeException.h  GeometryInitializeException.h  InvalidTypeException.h  JumpException.h  MissingConfigurationException.h  ResourceNotFoundException.h  UnsupportedOperationException.h  WrongAccumulationInRenderLoopException.h
(+507 files in other folders)
